updated execution-environment PRE and POST example tasks.

--- a/ansible-navigator.yml
+++ b/ansible-navigator.yml
@@ -15,7 +15,7 @@ ansible-navigator:
     append: False
     file: ./navigator-log/log.txt
 
-  mode: stdout
+  mode: interactive
 
   playbook-artifact:
     enable: False
