--- a/ee/ee-snow/execution-environment.yml
+++ b/ee/ee-snow/execution-environment.yml
@@ -5,4 +5,9 @@ dependencies:
 
 additional_build_steps:
   prepend: |
-    RUN pip3 install --upgrade pip setuptools
+    RUN whoami
+    RUN cat /etc/os-release
+  append:
+    - RUN echo This is a post-install command!
+    - RUN ls -la /etc
+
