adding USER to execution env.

--- a/ansible-navigator.yml
+++ b/ansible-navigator.yml
@@ -9,6 +9,9 @@ ansible-navigator:
     container-engine: podman
     image: ghcr.io/mysidlabs/sid-security-ee:latest
     pull-policy: missing
+    environment-variables:
+      pass:
+        - USER
 
   logging:
     level: critical
